Fix the broken layout in checkout.php
This should fix https://github.com/LukasMFR/projet-php-e-commerce/issues/11

This was due to the fact that we changed some "main" elements and they had effect on all the pages.

--- a/style.css
+++ b/style.css
@@ -1358,6 +1358,7 @@ footer .bottom-footer {
 	display: flex;
 	column-gap: 1.5rem;
 	flex-wrap: wrap;
+	height: 100%;
 }
 
 .checkout .row form .flex .box {
@@ -1395,6 +1396,7 @@ footer .bottom-footer {
 	justify-content: center;
 	padding: 1rem 0;
 	margin: .4rem;
+	height: 100%;
 }
 
 .summary .flex img {
